--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -8,9 +8,11 @@
 	--color-grey-light-3: #f0eeee;
 	--color-grey-light-4: #ccc;
 
-	--color-grey-dark-3: #999;
 	--color-grey-dark-1: #333;
 	--color-grey-dark-2: #777;
+	--color-grey-dark-3: #999;
+
+	--shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
 }
 
 * {
