--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -4,7 +4,7 @@
 	background-color: var(--color-grey-light-1);
 	box-shadow: var(--shadow-dark);
 
-	height: 50rem;
+	height: 85rem;
 }
 
 .header {
@@ -25,10 +25,17 @@
 	background-color: var(--color-grey-dark-1);
 
 	flex: 0 0 18%;
+
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
 }
 
 .hotel-view {
 	background-color: #fff;
+
+	//test
 	background-color: orangered;
+	height: 80rem;
 	flex: 1;
 }
