--- a/css/style.css
+++ b/css/style.css
@@ -121,32 +121,38 @@ body {
   margin-left: 2rem; }
 
 .search {
+  position: relative;
   flex: 0 0 40%;
   display: flex;
-  justify-content: center;
-  align-items: center; }
+  align-items: center;
+  justify-content: center; }
   @media only screen and (max-width: 31.25em) {
     .search {
       order: 1;
-      flex: 0 0 100%; } }
+      flex: 0 0 100%;
+      background-color: var(--color-grey-light-2); } }
   .search__input {
     font-family: inherit;
     font-size: inherit;
     color: inherit;
     background-color: var(--color-grey-light-2);
     border: none;
-    padding: 0.7rem 2rem;
+    padding: .7rem 2rem;
     border-radius: 100px;
     width: 90%;
-    transition: all 0.2s;
+    transition: all .2s;
     margin-right: -3.25rem; }
     .search__input:focus {
       outline: none;
       width: 100%;
       background-color: var(--color-grey-light-3); }
+    .search__input:focus .search-dropdown {
+      transform: scale(1); }
     .search__input::-webkit-input-placeholder {
       font-weight: 100;
       color: var(--color-grey-light-4); }
+  .search__input:focus ~ .search-dropdown {
+    transform: scaleY(1); }
   .search__input:focus + .search__button {
     background-color: var(--color-grey-light-3); }
   .search__button {
@@ -160,6 +166,64 @@ body {
     height: 2rem;
     width: 2rem;
     fill: var(--color-grey-dark-3); }
+
+.search-dropdown {
+  width: 38rem;
+  background-color: #fff;
+  position: absolute;
+  top: 100%;
+  left: 5%;
+  z-index: 10;
+  box-shadow: var(--shadow-dark);
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  transform: scaleY(0);
+  transform-origin: top;
+  transition: all .2s;
+  z-index: 15; }
+  .search-dropdown__list {
+    list-style: none; }
+  .search-dropdown__item {
+    padding: 1rem 2rem; }
+    .search-dropdown__item:not(:last-child) {
+      border-bottom: 1px solid var(--color-grey-light-3); }
+    .search-dropdown__item:hover {
+      background-color: var(--color-primary-lighter);
+      transition: all .3s; }
+    .search-dropdown__item:hover .search-dropdown__icon--pin {
+      transform: scale(1.5); }
+  .search-dropdown__link:link, .search-dropdown__link:visited {
+    text-decoration: none;
+    display: flex;
+    align-items: center; }
+  .search-dropdown__icon--bed {
+    height: 2.7rem;
+    width: 2.7rem;
+    fill: var(--color-grey-dark-2);
+    margin-right: 2rem; }
+  .search-dropdown__hotel-name {
+    text-transform: uppercase;
+    font-size: 1.8rem;
+    font-weight: 300;
+    color: var(--color-grey-dark-1);
+    margin-bottom: .4rem; }
+  .search-dropdown__location-container {
+    display: flex;
+    align-items: center; }
+  .search-dropdown__icon--pin {
+    height: 1.5rem;
+    width: 1.5rem;
+    fill: var(--color-primary);
+    margin-right: .5rem;
+    transition: all .4s; }
+  .search-dropdown__location {
+    font-size: 1.2rem;
+    color: var(--color-grey-dark-2); }
+  .search-dropdown__rating {
+    font-size: 2.5rem;
+    font-weight: 300;
+    color: var(--color-primary);
+    margin-left: auto; }
 
 .user-nav {
   align-self: stretch;
@@ -175,12 +239,14 @@ body {
     background-color: var(--color-grey-light-2); }
   .user-nav__icon-box {
     position: relative; }
+  .user-nav__checkbox-chat {
+    cursor: pointer; }
   .user-nav__icon {
     height: 2.25rem;
     width: 2.25rem;
     fill: var(--color-grey-dark-2); }
   .user-nav__notification {
-    font-size: 0.8rem;
+    font-size: .8rem;
     height: 1.75rem;
     width: 1.75rem;
     border-radius: 50%;
@@ -188,14 +254,136 @@ body {
     color: #fff;
     position: absolute;
     top: 1.5rem;
-    right: 1.1rem;
+    right: 1.5rem;
     display: flex;
     justify-content: center;
+    align-items: center; }
+  .user-nav__icon-box {
+    position: relative; }
+  .user-nav__user {
+    position: relative; }
+  .user-nav__checkbox-user {
+    cursor: pointer;
+    display: flex;
     align-items: center; }
   .user-nav__user-photo {
     height: 3.75rem;
     border-radius: 50%;
     margin-right: 1rem; }
+  .user-nav__input {
+    opacity: 0; }
+  .user-nav__input--user:checked ~ .profile-menu,
+  .user-nav__input--chat:checked ~ .messages {
+    transform-origin: top;
+    transform: scaleY(1); }
+
+.drop-down {
+  background-color: var(--color-grey-light-1);
+  list-style: none;
+  position: absolute;
+  top: 100%;
+  right: 0;
+  z-index: 20;
+  box-shadow: var(--shadow-dark);
+  border-bottom-left-radius: 3px;
+  overflow: hidden;
+  transform-origin: top;
+  transform: scaleY(0);
+  transition: all .2s; }
+
+.messages {
+  font-size: 1.2rem;
+  width: 35rem; }
+  @media only screen and (max-width: 31.25em) {
+    .messages {
+      right: -5rem;
+      width: 27rem; } }
+  .messages__list {
+    list-style: none; }
+  .messages__item {
+    transition: all .4s; }
+    .messages__item:not(:last-child) {
+      margin-bottom: .5rem; }
+  .messages__item:hover {
+    background-color: var(--color-grey-light-3); }
+  .messages__link:link, .messages__link:visited {
+    color: var(--color-grey-dark-1);
+    text-decoration: none;
+    display: block;
+    padding: 1rem 2.5rem;
+    display: flex;
+    align-items: center; }
+  .messages__photo {
+    height: 4.5rem;
+    width: 4.5rem;
+    border-radius: 50%;
+    margin-right: 1.5rem; }
+  .messages__text {
+    margin-right: auto; }
+  .messages__name {
+    font-weight: 600; }
+  .messages__timestamp {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end; }
+  .messages__time {
+    color: var(--color-grey-dark-2); }
+  .messages__read-circle {
+    height: .6rem;
+    width: .6rem;
+    border-radius: 50%;
+    border: 1px solid var(--color-grey-dark-3);
+    margin-top: .5rem; }
+  .messages__button-box {
+    padding: 1rem 1rem;
+    display: flex;
+    justify-content: space-between; }
+  .messages__button {
+    border: none;
+    color: var(--color-primary);
+    font-size: inherit;
+    display: inline-block;
+    background-color: transparent;
+    cursor: pointer;
+    transition: all .2s; }
+    .messages__button:hover {
+      border-bottom: 1px solid var(--color-primary); }
+
+.unread {
+  background-color: var(--color-primary-lightest); }
+  .unread .messages__read-circle {
+    background-color: var(--color-grey-dark-2); }
+
+.profile-menu {
+  font-size: 1.4rem;
+  width: 20rem; }
+  @media only screen and (max-width: 31.25em) {
+    .profile-menu {
+      top: 4rem;
+      width: 15rem; } }
+  .profile-menu__list {
+    list-style: none; }
+  .profile-menu__item {
+    transition: all .4s; }
+    .profile-menu__item:not(:last-child) {
+      margin-bottom: .5rem; }
+  .profile-menu__item:hover {
+    background-color: var(--color-primary-lighter); }
+  .profile-menu__item:hover .profile-menu__icon {
+    fill: var(--color-primary); }
+  .profile-menu__link:link, .profile-menu__link:visited {
+    color: var(--color-grey-dark-2);
+    text-decoration: none;
+    display: block;
+    padding: 1rem 2.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start; }
+  .profile-menu__icon {
+    width: 1.75rem;
+    height: 1.75rem;
+    margin-right: 2rem;
+    fill: currentColor; }
 
 .side-nav {
   font-size: 1.4rem;
@@ -208,7 +396,7 @@ body {
   .side-nav__item {
     position: relative; }
     .side-nav__item:not(:last-child) {
-      margin-bottom: 0.5rem; }
+      margin-bottom: .5rem; }
       @media only screen and (max-width: 56.25em) {
         .side-nav__item:not(:last-child) {
           margin: 0; } }
@@ -247,7 +435,7 @@ body {
     @media only screen and (max-width: 37.5em) {
       .side-nav__link:link, .side-nav__link:visited {
         flex-direction: column;
-        padding: 1.5rem 0.5rem; } }
+        padding: 1.5rem .5rem; } }
   .side-nav__icon {
     width: 1.75rem;
     height: 1.75rem;
@@ -256,8 +444,8 @@ body {
     @media only screen and (max-width: 37.5em) {
       .side-nav__icon {
         margin-right: 0;
-        margin-bottom: 0.7rem;
-        width: 1.5rem;
+        margin-bottom: .7rem;
+        width: 1.7rem;
         height: 1.5rem; } }
 
 .legal {
@@ -271,9 +459,38 @@ body {
 
 .gallery {
   display: flex; }
+  .gallery__item {
+    overflow: hidden;
+    backface-visibility: hidden;
+    position: relative; }
+    .gallery__item:hover > .gallery__photo {
+      transform: scale(1.2);
+      filter: blur(3px) brightness(70%); }
+    .gallery__item:hover > .gallery__caption {
+      opacity: 1;
+      transform: translate(-50%, -50%); }
   .gallery__photo {
     width: 100%;
-    display: block; }
+    display: block;
+    transition: all .5s; }
+  .gallery__caption {
+    position: absolute;
+    display: block;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 20%);
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 1.7rem;
+    letter-spacing: 2px;
+    text-align: center;
+    opacity: 0;
+    transition: all .5s;
+    backface-visibility: hidden;
+    cursor: default; }
+    @media only screen and (max-width: 37.5em) {
+      .gallery__caption {
+        font-size: 1.4rem; } }
 
 .overview {
   display: flex;
@@ -289,6 +506,10 @@ body {
       .overview__heading {
         font-size: 1.8rem;
         padding: 1.25rem 2rem; } }
+    @media only screen and (max-width: 37.5em) {
+      .overview__heading {
+        font-size: 1.8rem;
+        padding: 1.25rem 1rem 1.25rem 2rem; } }
   .overview__stars {
     margin-right: auto;
     display: flex; }
@@ -301,7 +522,7 @@ body {
     display: flex;
     align-items: center; }
   .overview__icon-location {
-    margin-right: 0.5rem; }
+    margin-right: .5rem; }
   .overview__rating {
     background-color: var(--color-primary);
     color: #fff;
@@ -310,8 +531,8 @@ body {
     align-self: stretch;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center; }
+    justify-content: center;
+    align-items: center; }
     @media only screen and (max-width: 37.5em) {
       .overview__rating {
         padding: 0 1.5rem; } }
@@ -323,11 +544,12 @@ body {
       .overview__rating-average {
         font-size: 1.8rem; } }
   .overview__rating-count {
-    font-size: 0.8rem;
+    font-size: .8rem;
     text-transform: uppercase; }
     @media only screen and (max-width: 37.5em) {
       .overview__rating-count {
-        font-size: 0.5rem; } }
+        font-size: .5rem;
+        text-align: center; } }
 
 .btn-inline {
   border: none;
@@ -338,10 +560,10 @@ body {
   display: inline-block;
   background-color: transparent;
   cursor: pointer;
-  transition: all 0.2s; }
+  transition: all .2s; }
   .btn-inline span {
     margin-left: 3px;
-    transition: margin-left 0.2s; }
+    transition: margin-left .2s; }
   .btn-inline:hover {
     color: var(--color-grey-dark-1); }
     .btn-inline:hover span {
@@ -374,18 +596,23 @@ body {
   flex-wrap: wrap; }
   .list__item {
     flex: 0 0 50%;
-    margin-bottom: 0.7rem; }
+    margin-bottom: .7rem; }
   .list__item::before {
     content: "";
     display: inline-block;
     height: 1rem;
     width: 1rem;
-    margin-right: 0.7rem;
-    background-color: var(--color-primary);
-    -webkit-mask-image: url(../img/chevron-thin-right.svg);
-    mask-image: url(../img/chevron-thin-right.svg);
-    -webkit-mask-size: cover;
-    mask-size: cover; }
+    margin-right: .7rem;
+    background-image: url(../img/chevron-thin-right.svg);
+    background-size: cover; }
+    @supports (-webkit-mask-image: url()) or (mask-image: url()) {
+      .list__item::before {
+        background-color: var(--color-primary);
+        -webkit-mask-image: url(../img/chevron-thin-right.svg);
+        mask-image: url(../img/chevron-thin-right.svg);
+        -webkit-mask-size: cover;
+        mask-size: cover;
+        background-image: none; } }
 
 .recommend {
   font-size: 1.3rem;
@@ -432,16 +659,16 @@ body {
     margin-right: auto; }
   .review__user-name {
     font-size: 1.1rem;
-    font-weight: 600;
     text-transform: uppercase;
-    margin-bottom: 0.4rem; }
+    font-weight: 600;
+    margin-bottom: .4rem; }
   .review__user-date {
     font-size: 1rem;
     color: var(--color-grey-dark-3); }
   .review__rating {
-    color: var(--color-primary);
     font-size: 2.2rem;
-    font-weight: 300; }
+    font-weight: 300;
+    color: var(--color-primary); }
   .review::before {
     content: "\201C";
     position: absolute;
@@ -454,16 +681,22 @@ body {
     z-index: 1; }
 
 .cta {
-  padding: 3.5rem;
+  padding: 3.5rem 0;
   text-align: center; }
   @media only screen and (max-width: 56.25em) {
     .cta {
-      padding: 2.5rem 0; } }
+      padding: 2.5rem 1.5rem; } }
   .cta__book-now {
     font-size: 2rem;
     font-weight: 300;
     text-transform: uppercase;
     margin-bottom: 2.5rem; }
+    @media only screen and (max-width: 37.5em) {
+      .cta__book-now {
+        font-size: 1.8rem; } }
+    @media only screen and (max-width: 31.25em) {
+      .cta__book-now {
+        font-size: 1.5rem; } }
 
 .btn {
   font-size: 1.5rem;
@@ -480,7 +713,7 @@ body {
     display: inline-block;
     height: 100%;
     width: 100%;
-    transition: all 0.2s; }
+    transition: all .2s; }
   .btn__visible {
     padding: 2rem 7.5rem; }
   .btn__invisible {
